@@ -1,6 +1,16 @@
 1.3 (SVN/unreleased)
 ====================
 
+ * Added javascript "full" compression, which achieves higher compression ratios
+   by doing variable name packing based on the rules from Dean Edwards packer:
+   http://dean.edwards.name/packer/usage/
+   [fschulze]
+
+ * Added keyword encoding for javascript. This greatly reduces the file size of
+   javascript files, but adds a small performance hit on the client for the
+   decoding.
+   [fschulze]
+
 1.3-alpha1
 ==========
 
